   * Add Japanese large speech rec vosk/kaldi model - thx coastal45
   * Add Netflix Chinese profile - thx Kester
   * Fix casing of some German nouns after audio-to-text
   * Add toolbar icon for WebVTT properties - thx Leon
   * Add shortcut for toggle between text box and waveform - thx Marko
   * Add shortcuts for go to next/prev and focus waveform - thx cyzs233
* IMPROVED:
   * Update Polish translation - thx admas
   * Update Bulgarian translation - thx Калин
   * Update Chinese translation - thx nkh0472
   * Update Italian translation - thx bovirus
   * Update Russian translation - Elheym
   * Update Portuguese translation - thx hugok79
   * Update Korean translation - thx domddol
   * Update Finnish translation - thx Teijo S
   * Update French translation - the Peirre
   * Update Brazilian Portuguese translation - thx Igor
   * Update Vosk to v0.3.42
   * Update Tesseract OCR to 5.2.0
   * Minor improvements for compare
   * Improve top alignment capture for bdsup - thx tormento
   * Improve DCinema 2010 - thx stephw999
   * Add taskbar progress bar for audio to text - thx lambdacore12
   * Warn about duplicate style names in ASSA/SSA
   * Improve keeping original bd sup colors - thx resolution
   * Spell check can now have "se" word list (besides user words)
   * Separate "Word lists" to own menu item
   * Add bit rate info for burn-in two pass - thx Marko
* FIXED:
   * Fix crash in "Remove text for HI" - thx loicvan
   * Fix crash in "Fix music notation" - thx ReallyInventiveUserName
   * Fix crash in "Fix music notation" - thx MizzouDawg
   * Fix crash in save as ASSA after SSA - thx darnn
   * Fix crash in compare export - thx 1380
   * Fix crash in visual sync - thx fusefib
   * Fix crash in export ssa styles w dup style name - thx A-Winters
   * Fix crash in bd sup edit when changing color/resolution/alpha
   * Fix crash in generate blank video with no sub loaded
   * Fix crash in post processing after vosk/kaldi - thx Can/WestcoastHstd