@@ -45,7 +45,7 @@ namespace Nikse.SubtitleEdit.Forms
                 progressBar1.Value++;
                 try
                 {
-                    var targetFile = Path.Combine(targetFolder, (index+1)+ ".wav");
+                    var targetFile = Path.Combine(targetFolder, MakeTimeCodeFileName(item)  + ".wav");
                     var audioParameter = string.Empty;
                     if (_audioTrackNumber > 0)
                     {
@@ -96,6 +96,15 @@ namespace Nikse.SubtitleEdit.Forms
             }
             labelProgress.Text = string.Empty;
             DialogResult = DialogResult.OK;
+        }
+
+        private string MakeTimeCodeFileName(Paragraph item)
+        {
+            //0_00_01_042__0_00_03_919_01.wav
+            return
+                item.StartTime.ToDisplayString().Replace('.', '_').Replace(':', '_').Replace(',', '_') + 
+                "__" + 
+                item.StartTime.ToDisplayString().Replace('.', '_').Replace(':', '_').Replace(',', '_');
         }
 
         private void UpdateStatus(string status)
